# tic-tac-toe

./: .gitattributes  .gitignore  CMakeLists.txt  README.md
Data/: save_button.yaml
Data/Config/: scenes.config
Data/Scenes/: demo-scene.yaml  main-game.scene  main-menu.scene
src/: demo-scene.yaml  main.cpp
src/components/: Component.h  Font.cpp  Font.h  Transform2D.cpp  Transform2D.h
src/components/ui/: Button.cpp  Button.h  Image.cpp  Image.h  Text.cpp  Text.h
src/core/: Game.cpp  Game.h  ImageManager.cpp  ImageManager.h  InputManager.cpp  InputManager.h  Logger.cpp  Logger.h  Object.cpp  Object.h  Scene.cpp  Scene.h  SceneManager.cpp  SceneManager.h  Texture.cpp  Texture.h
src/core/game-objects/: Component.cpp  Component.h  Element.cpp  Element.h  Transform2D.cpp  Transform2D.h  WorldElement.cpp  WorldElement.h
src/elements/: Element.cpp  Element.h
src/game/: Cell.cpp  Cell.h  GameTicTacToe.cpp  GameTicTacToe.h  GoToScene.cpp  GoToScene.h  SceneMainMenu.cpp  SceneMainMenu.h  SceneTicTacToe.cpp  SceneTicTacToe.h  TableBoard.cpp  TableBoard.h
src/game-objects/components/: Component.h  Transform2D.cpp  Transform2D.h
src/game-objects/elements/: Element.cpp  Element.h  WorldElement.cpp  WorldElement.h
src/metadata-testing/: AwesomeElement.cpp  AwesomeElement.h  SceneMetadata.cpp  SceneMetadata.h
src/serialization/: Metadata.cpp  Metadata.h  ObjectMetadataSerialize.cpp  ObjectMetadataSerialize.h  Register.cpp  Register.h  SerializationConfig.h  Serializer.cpp  Serializer.h  SerializerBase.h
src/services/: GameServices.cpp  GameServices.h  ImageService.h
src/services/implementations/: KeyboardInputService.cpp  KeyboardInputService.h  KeyboardInputServiceImpl.cpp  KeyboardInputServiceImpl.h  SDLCursorService.cpp  SDLCursorService.h  SDLCursorServiceImpl.cpp  SDLCursorServiceImpl.h  SDLImageService.cpp  SDLImageService.h  SDLImageServiceImpl.cpp  SDLImageServiceImpl.h  SceneServiceImpl.cpp  SceneServiceImpl.h  ScreenServiceImpl.cpp  ScreenServiceImpl.h
src/services/interfaces/: CursorService.h  ImageService.h  InputService.h  SceneService.h  ScreenService.h
src/services/null-services/: NullCursorService.h  NullImageService.h  NullInputService.h  NullSceneService.h  NullScreenService.h
src/ui/: Button.cpp  Button.h  SaveSceneButton.cpp  SaveSceneButton.h  Text.cpp  Text.h  UIElement.cpp  UIElement.h
